deploy/envoy.yaml
static_resources:
  listeners:
    - name: https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress
                use_remote_address: true
                stream_idle_timeout: 0s
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: routes
                  virtual_hosts:
                    - name: livekit
                      domains: ["livekit.*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: livekit
                            timeout: 0s
                    - name: application
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: application }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: ["h2", "http/1.1"]
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/tls/origin.pem
                    private_key:
                      filename: /etc/envoy/tls/origin-key.pem
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2

  clusters:
    - name: application
      connect_timeout: 2s
      type: STATIC
      load_assignment:
        cluster_name: application
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
    - name: livekit
      connect_timeout: 2s
      type: STATIC
      load_assignment:
        cluster_name: livekit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 7880
